--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ main .buttons .btn {
     border          : none;
     border-radius   : 4px;
     margin-left     : 8px;
+    cursor          : pointer;
 }
 
 main .other-languages {
