--- a/style.css
+++ b/style.css
@@ -160,3 +160,36 @@ footer span a {
     margin-left    : 20px;
     font-size      : 14px;
 }
+
+
+@media screen and (max-width: 600px) {
+    .search-input-box {
+        max-width: 400px;
+
+    }
+
+    .scope-svg {
+        min-width: 20px;
+
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .search-input-box {
+        max-width: 300px;
+
+    }
+
+    .left-links,
+    .right-links {
+        display       : flex;
+        flex-direction: column;
+    }
+
+    .scope-svg {
+        min-width: 20px;
+
+    }
+
+
+}
